fix template dropdown overflow issue (#3613)

--- a/packages/legend-extension-dsl-data-space/style/_data-space-query-plugin.scss
+++ b/packages/legend-extension-dsl-data-space/style/_data-space-query-plugin.scss
@@ -223,6 +223,7 @@
   height: 50vh;
   width: 20vw;
   pointer-events: all;
+  overflow: scroll;
 
   &__container {
     &__root {
